--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,5 @@
-watch_file \
-  rust-toolchain.toml \
-  nix/modules/*.nix
-use flake
+export DIRENV_WARN_TIMEOUT=20s
+
+eval "$(devenv direnvrc)"
+
+use devenv
