--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.0.0"
 edition = "2021"
 
 [dependencies]
-rnix = "0.11"
-serde_json = "1.0"
+tokio = { version = "1", features = ["full"]}
+tower-lsp = "0.20.0"
 
