--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.0.0"
 edition = "2021"
 
 [dependencies]
+env = "1.0.1"
 tokio = { version = "1", features = ["full"]}
 tower-lsp = "0.20.0"
 
