--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,16 @@
 name = "etanol"
 version = "0.0.0"
 edition = "2021"
+build = "build.rs"
 
 [dependencies]
 env = "1.0.1"
 regex = "1.11.1"
 tokio = { version = "1", features = ["full"]}
 tower-lsp = "0.20.0"
+tree-sitter = "0.20"
+tree-sitter-highlight = "0.20"
+
+[build-dependencies]
+cc = "1.0"
 
