--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         node-version: '20.x'
     - name: Pre Build tree sitter
-      run: ls && cd vendor/tree-sitter-kotlin && npm install && npx tree-sitter generate && cd ../..
+      run: ls vendor/tree-sitter-kotlin && cd vendor/tree-sitter-kotlin && npm install && npx tree-sitter generate && cd ../..
     - name: Build
       run: cargo build --verbose
     - name: Run tests
