Trying to fix github workflows

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,12 +20,12 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '20.x'
-    - name: Go to tree sitter
-      run: cd vendor/tree-sitter-kotlin
     - name: Build tree sitter
-      run: npm install && npx tree-sitter generate
-    - name: Leave tree sitter
-      run: cd ../.. && ls
+      working-directory: vendor/tree-sitter-kotlin
+      run: |
+          cd vendor/tree-sitter-kotlin
+          npm install
+          npx tree-sitter generate
     - name: Build
       run: cargo build --verbose
     - name: Run tests
