--- a/devenv.yaml
+++ b/devenv.yaml
@@ -1,9 +1,14 @@
-allowUnfree: true
 inputs:
-  nixpkgs:
-    url: github:cachix/devenv-nixpkgs/rolling
   fenix:
     url: github:nix-community/fenix
     inputs:
       nixpkgs:
         follows: nixpkgs
+  nixpkgs:
+    url: github:NixOS/nixpkgs/nixpkgs-unstable
+  rust-overlay:
+    url: github:oxalica/rust-overlay
+    inputs:
+      nixpkgs:
+        follows: nixpkgs
+allowUnfree: true
